tests/data/wildcard-tls-secret/mergeable/wildcard-secret-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
  - hosts:
    - wildcard.example.com
  rules:
  - host: wildcard.example.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: wildcard.example.com
    http:
      paths:
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: wildcard.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
